--- a/index.ipynb
+++ b/index.ipynb
@@ -49,10 +49,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Classification models\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "# Models\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.linear_model import LinearRegression  \n",
     "\n",
     "# KMeans\n",
