--- a/index.ipynb
+++ b/index.ipynb
@@ -1057,7 +1057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5 - Clustering avec K- Means:"
+    "## 5 - Clustering with K- Means:"
    ]
   },
   {
