--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "2  40.541805 -74.196109  "
       ]
      },
-     "execution_count": 368,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "max     -73.702450  "
       ]
      },
-     "execution_count": 370,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -585,190 +585,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TYPE</th>\n",
-       "      <th>PRICE</th>\n",
-       "      <th>BEDS</th>\n",
-       "      <th>BATH</th>\n",
-       "      <th>PROPERTYSQFT</th>\n",
-       "      <th>LATITUDE</th>\n",
-       "      <th>LONGITUDE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>315000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1400.000000</td>\n",
-       "      <td>40.761255</td>\n",
-       "      <td>-73.974483</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6</td>\n",
-       "      <td>260000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2015.000000</td>\n",
-       "      <td>40.541805</td>\n",
-       "      <td>-74.196109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>69000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>445.000000</td>\n",
-       "      <td>40.761398</td>\n",
-       "      <td>-73.974613</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>55000000</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.373861</td>\n",
-       "      <td>14175.000000</td>\n",
-       "      <td>40.767224</td>\n",
-       "      <td>-73.969856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>690000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>4004.000000</td>\n",
-       "      <td>40.674363</td>\n",
-       "      <td>-73.958725</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4796</th>\n",
-       "      <td>0</td>\n",
-       "      <td>599000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2184.207862</td>\n",
-       "      <td>40.774350</td>\n",
-       "      <td>-73.955879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4797</th>\n",
-       "      <td>0</td>\n",
-       "      <td>245000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2184.207862</td>\n",
-       "      <td>40.732538</td>\n",
-       "      <td>-73.860152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4798</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1275000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2184.207862</td>\n",
-       "      <td>40.745882</td>\n",
-       "      <td>-74.003398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4799</th>\n",
-       "      <td>1</td>\n",
-       "      <td>598125</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>655.000000</td>\n",
-       "      <td>40.742770</td>\n",
-       "      <td>-73.872752</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4800</th>\n",
-       "      <td>0</td>\n",
-       "      <td>349000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>750.000000</td>\n",
-       "      <td>40.579147</td>\n",
-       "      <td>-73.970949</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4585 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      TYPE     PRICE  BEDS      BATH  PROPERTYSQFT   LATITUDE  LONGITUDE\n",
-       "0        1    315000     2  2.000000   1400.000000  40.761255 -73.974483\n",
-       "2        6    260000     4  2.000000   2015.000000  40.541805 -74.196109\n",
-       "3        1     69000     3  1.000000    445.000000  40.761398 -73.974613\n",
-       "4       10  55000000     7  2.373861  14175.000000  40.767224 -73.969856\n",
-       "5        6    690000     5  2.000000   4004.000000  40.674363 -73.958725\n",
-       "...    ...       ...   ...       ...           ...        ...        ...\n",
-       "4796     0    599000     1  1.000000   2184.207862  40.774350 -73.955879\n",
-       "4797     0    245000     1  1.000000   2184.207862  40.732538 -73.860152\n",
-       "4798     0   1275000     1  1.000000   2184.207862  40.745882 -74.003398\n",
-       "4799     1    598125     2  1.000000    655.000000  40.742770 -73.872752\n",
-       "4800     0    349000     1  1.000000    750.000000  40.579147 -73.970949\n",
-       "\n",
-       "[4585 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 377,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Drop irrelevant columns\n",
     "df = df.drop(columns=[\n",
     "    'BROKERTITLE', 'ADDRESS', 'STATE', 'MAIN_ADDRESS', \n",
     "    'ADMINISTRATIVE_AREA_LEVEL_2', 'LOCALITY', 'SUBLOCALITY', \n",
     "    'STREET_NAME', 'LONG_NAME', 'FORMATTED_ADDRESS'\n",
-    "])\n",
-    "df"
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +696,7 @@
        "5     6    690000     5  2.000000        4004.0  40.674363 -73.958725"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -975,19 +806,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\zakaria boukeffa\\AppData\\Local\\Temp\\ipykernel_4740\\258146315.py:10: FutureWarning: \n",
+      "C:\\Users\\zakaria boukeffa\\AppData\\Local\\Temp\\ipykernel_25576\\258146315.py:10: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.boxplot(x='BEDS', y='PRICE', data=df, palette=\"Set2\", ax=ax1, showfliers=False)\n",
-      "C:\\Users\\zakaria boukeffa\\AppData\\Local\\Temp\\ipykernel_4740\\258146315.py:16: FutureWarning: \n",
+      "C:\\Users\\zakaria boukeffa\\AppData\\Local\\Temp\\ipykernel_25576\\258146315.py:16: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1033,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -1337,31 +1168,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2853</th>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3223.0</td>\n",
-       "      <td>40.720036</td>\n",
-       "      <td>-73.800703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2965</th>\n",
+       "      <th>3137</th>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>800.0</td>\n",
-       "      <td>40.586022</td>\n",
-       "      <td>-73.966836</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2184.207862</td>\n",
+       "      <td>40.727620</td>\n",
+       "      <td>-73.846860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>687</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>554.0</td>\n",
-       "      <td>40.725976</td>\n",
-       "      <td>-73.859980</td>\n",
+       "      <th>1992</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2184.207862</td>\n",
+       "      <td>40.694356</td>\n",
+       "      <td>-73.854380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2784</th>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3773.000000</td>\n",
+       "      <td>40.546124</td>\n",
+       "      <td>-74.182666</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1369,12 +1200,12 @@
       ],
       "text/plain": [
        "      TYPE  BEDS  BATH  PROPERTYSQFT   LATITUDE  LONGITUDE\n",
-       "2853     6     4     4        3223.0  40.720036 -73.800703\n",
-       "2965     0     2     1         800.0  40.586022 -73.966836\n",
-       "687      1     1     1         554.0  40.725976 -73.859980"
+       "3137     0     1     1   2184.207862  40.727620 -73.846860\n",
+       "1992     8     6     3   2184.207862  40.694356 -73.854380\n",
+       "2784     8     5     4   3773.000000  40.546124 -74.182666"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,19 +1216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2853    2095000\n",
-       "2965     300000\n",
-       "687      478900\n",
+       "3137     224000\n",
+       "1992    1200000\n",
+       "2784    1599999\n",
        "Name: PRICE, dtype: int64"
       ]
      },
-     "execution_count": 390,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1442,31 +1273,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1653</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1525.000000</td>\n",
-       "      <td>40.763142</td>\n",
-       "      <td>-73.990601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2904</th>\n",
+       "      <th>3931</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2184.207862</td>\n",
-       "      <td>40.726784</td>\n",
-       "      <td>-73.858780</td>\n",
+       "      <td>40.767256</td>\n",
+       "      <td>-73.968223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>717</th>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
+       "      <th>1283</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>5660.000000</td>\n",
-       "      <td>40.791801</td>\n",
-       "      <td>-73.966600</td>\n",
+       "      <td>2184.207862</td>\n",
+       "      <td>40.751844</td>\n",
+       "      <td>-73.882279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1248</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2273.000000</td>\n",
+       "      <td>40.897652</td>\n",
+       "      <td>-73.901940</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1474,12 +1305,12 @@
       ],
       "text/plain": [
        "      TYPE  BEDS  BATH  PROPERTYSQFT   LATITUDE  LONGITUDE\n",
-       "1653     1     3     2   1525.000000  40.763142 -73.990601\n",
-       "2904     0     1     1   2184.207862  40.726784 -73.858780\n",
-       "717     10     5     2   5660.000000  40.791801 -73.966600"
+       "3931     0     1     1   2184.207862  40.767256 -73.968223\n",
+       "1283     0     3     2   2184.207862  40.751844 -73.882279\n",
+       "1248     6     4     2   2273.000000  40.897652 -73.901940"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,19 +1321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1653     2550000\n",
-       "2904      235000\n",
-       "717     10000000\n",
+       "3931     495000\n",
+       "1283     985000\n",
+       "1248    1250000\n",
        "Name: PRICE, dtype: int64"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -1528,10 +1359,10 @@
      "output_type": "stream",
      "text": [
       "      Real Value    Prediction\n",
-      "1653     2550000  1.920090e+06\n",
-      "2904      235000  1.169127e+06\n",
-      "717     10000000  4.075508e+06\n",
-      "1534      539000  1.189900e+06\n"
+      "3931      495000  2.028186e+06\n",
+      "1283      985000  1.524869e+06\n",
+      "1248     1250000  2.780515e+06\n",
+      "2574      239000  1.682591e+06\n"
      ]
     }
    ],
@@ -1555,18 +1386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Valeur Réelle    Prédiction\n",
-      "1653        2550000  2.505783e+06\n",
-      "2904         235000  2.661588e+05\n",
-      "717        10000000  9.877935e+06\n",
-      "1534         539000  2.824625e+05\n"
+     "ename": "NameError",
+     "evalue": "name 'RandomForestRegressor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[174], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Model Training\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m rf_model \u001b[38;5;241m=\u001b[39m \u001b[43mRandomForestRegressor\u001b[49m(n_estimators\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[0;32m      3\u001b[0m rf_model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m      4\u001b[0m rf_prediction \u001b[38;5;241m=\u001b[39m rf_model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'RandomForestRegressor' is not defined"
      ]
     }
    ],
