--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Models\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import LinearRegression  \n",
     "\n",
     "# KMeans\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "2  40.541805 -74.196109  "
       ]
      },
-     "execution_count": 149,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "max     -73.702450  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "5     6    690000     5  2.000000        4004.0  40.674363 -73.958725"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 419,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
@@ -1168,31 +1168,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3137</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2184.207862</td>\n",
-       "      <td>40.727620</td>\n",
-       "      <td>-73.846860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1992</th>\n",
+       "      <th>3638</th>\n",
        "      <td>8</td>\n",
        "      <td>6</td>\n",
        "      <td>3</td>\n",
-       "      <td>2184.207862</td>\n",
-       "      <td>40.694356</td>\n",
-       "      <td>-73.854380</td>\n",
+       "      <td>1760.0</td>\n",
+       "      <td>40.852907</td>\n",
+       "      <td>-73.830339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2784</th>\n",
-       "      <td>8</td>\n",
-       "      <td>5</td>\n",
+       "      <th>4578</th>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1675.0</td>\n",
+       "      <td>40.861114</td>\n",
+       "      <td>-73.843997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2700</th>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>3773.000000</td>\n",
-       "      <td>40.546124</td>\n",
-       "      <td>-74.182666</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3052.0</td>\n",
+       "      <td>40.724188</td>\n",
+       "      <td>-73.980457</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1200,12 +1200,12 @@
       ],
       "text/plain": [
        "      TYPE  BEDS  BATH  PROPERTYSQFT   LATITUDE  LONGITUDE\n",
-       "3137     0     1     1   2184.207862  40.727620 -73.846860\n",
-       "1992     8     6     3   2184.207862  40.694356 -73.854380\n",
-       "2784     8     5     4   3773.000000  40.546124 -74.182666"
+       "3638     8     6     3        1760.0  40.852907 -73.830339\n",
+       "4578     6     3     2        1675.0  40.861114 -73.843997\n",
+       "2700     1     4     4        3052.0  40.724188 -73.980457"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 429,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,19 +1216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3137     224000\n",
-       "1992    1200000\n",
-       "2784    1599999\n",
+       "3638     919000\n",
+       "4578     840000\n",
+       "2700    4595000\n",
        "Name: PRICE, dtype: int64"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 430,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -1273,31 +1273,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3931</th>\n",
+       "      <th>2170</th>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2184.207862</td>\n",
+       "      <td>40.786953</td>\n",
+       "      <td>-73.783385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>971</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2184.207862</td>\n",
-       "      <td>40.767256</td>\n",
-       "      <td>-73.968223</td>\n",
+       "      <td>40.729293</td>\n",
+       "      <td>-74.003447</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1283</th>\n",
-       "      <td>0</td>\n",
+       "      <th>425</th>\n",
+       "      <td>7</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>2184.207862</td>\n",
-       "      <td>40.751844</td>\n",
-       "      <td>-73.882279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1248</th>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2273.000000</td>\n",
-       "      <td>40.897652</td>\n",
-       "      <td>-73.901940</td>\n",
+       "      <td>40.845752</td>\n",
+       "      <td>-73.905968</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1305,12 +1305,12 @@
       ],
       "text/plain": [
        "      TYPE  BEDS  BATH  PROPERTYSQFT   LATITUDE  LONGITUDE\n",
-       "3931     0     1     1   2184.207862  40.767256 -73.968223\n",
-       "1283     0     3     2   2184.207862  40.751844 -73.882279\n",
-       "1248     6     4     2   2273.000000  40.897652 -73.901940"
+       "2170     8     4     5   2184.207862  40.786953 -73.783385\n",
+       "971      0     1     1   2184.207862  40.729293 -74.003447\n",
+       "425      7     3     2   2184.207862  40.845752 -73.905968"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 431,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,19 +1321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3931     495000\n",
-       "1283     985000\n",
-       "1248    1250000\n",
+       "2170    2290000\n",
+       "971      850000\n",
+       "425      795000\n",
        "Name: PRICE, dtype: int64"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 432,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -1359,10 +1359,10 @@
      "output_type": "stream",
      "text": [
       "      Real Value    Prediction\n",
-      "3931      495000  2.028186e+06\n",
-      "1283      985000  1.524869e+06\n",
-      "1248     1250000  2.780515e+06\n",
-      "2574      239000  1.682591e+06\n"
+      "2170     2290000  2.687907e+06\n",
+      "971       850000  2.219103e+06\n",
+      "425       795000  2.585599e+06\n",
+      "3518      868000  1.663849e+06\n"
      ]
     }
    ],
@@ -1386,18 +1386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'RandomForestRegressor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[174], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Model Training\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m rf_model \u001b[38;5;241m=\u001b[39m \u001b[43mRandomForestRegressor\u001b[49m(n_estimators\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[0;32m      3\u001b[0m rf_model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m      4\u001b[0m rf_prediction \u001b[38;5;241m=\u001b[39m rf_model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'RandomForestRegressor' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Valeur Réelle  Prédiction\n",
+      "2170        2290000  2214695.00\n",
+      "971          850000   793550.00\n",
+      "425          795000  1480656.30\n",
+      "3518         868000   960181.03\n"
      ]
     }
    ],
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -1431,12 +1431,12 @@
       "\n",
       "Importance des features:\n",
       "        feature  importance\n",
-      "3  PROPERTYSQFT    0.367138\n",
-      "5     LONGITUDE    0.151364\n",
-      "4      LATITUDE    0.148941\n",
-      "0          TYPE    0.128898\n",
-      "2          BATH    0.113471\n",
-      "1          BEDS    0.090188\n"
+      "3  PROPERTYSQFT    0.362386\n",
+      "4      LATITUDE    0.153022\n",
+      "5     LONGITUDE    0.149858\n",
+      "0          TYPE    0.129250\n",
+      "2          BATH    0.122769\n",
+      "1          BEDS    0.082716\n"
      ]
     }
    ],
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
@@ -1458,27 +1458,27 @@
      "text": [
       "\n",
       "Linear Regression Evaluation:\n",
-      "Mean Squared Error: 12332209799454.26\n",
-      "Root Mean Squared Error: 3511724.6189663364\n",
-      "R² Score: 0.20904863944605478\n",
+      "Mean Squared Error: 12712032347498.12\n",
+      "Root Mean Squared Error: 3565393.7156362017\n",
+      "R² Score: 0.25666745404345637\n",
       "\n",
       "Random Forest Evaluation:\n",
-      "Mean Squared Error: 4524299566052.925\n",
-      "Root Mean Squared Error: 2127040.095074121\n",
-      "R² Score: 0.7098248444101604\n"
+      "Mean Squared Error: 5701783028718.412\n",
+      "Root Mean Squared Error: 2387840.6623387607\n",
+      "R² Score: 0.6665898277026314\n"
      ]
     }
    ],
    "source": [
     "# Evaluation of Linear Regression Model\n",
-    "lr_mse = mean_squared_error(y_test, lr_prediction)\n",
+    "lr_mse = metrics.mean_squared_error(y_test, lr_prediction)\n",
     "lr_rmse = np.sqrt(lr_mse)\n",
-    "lr_r2 = r2_score(y_test, lr_prediction)\n",
+    "lr_r2 = metrics.r2_score(y_test, lr_prediction)\n",
     "\n",
     "# Evaluation of Random Forest Model\n",
-    "rf_mse = mean_squared_error(y_test, rf_prediction)\n",
+    "rf_mse = metrics.mean_squared_error(y_test, rf_prediction)\n",
     "rf_rmse = np.sqrt(rf_mse)\n",
-    "rf_r2 = r2_score(y_test, rf_prediction)\n",
+    "rf_r2 = metrics.r2_score(y_test, rf_prediction)\n",
     "\n",
     "# Printing the evaluation metrics for both models\n",
     "print(\"\\nLinear Regression Evaluation:\")\n",
