--- a/index.ipynb
+++ b/index.ipynb
@@ -1393,7 +1393,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Valeur Réelle    Prédiction\n",
+      "      Real Value    Prediction\n",
       "3863         675999  6.723637e+05\n",
       "769          675000  7.622900e+05\n",
       "3538        2449000  1.440750e+06\n",
@@ -1408,7 +1408,7 @@
     "rf_prediction = rf_model.predict(X_test)\n",
     "\n",
     "# Displaying Results\n",
-    "results = pd.DataFrame({'Valeur Réelle': y_test, 'Prédiction': rf_prediction})\n",
+    "results = pd.DataFrame({'Real Value': y_test, 'Prediction': rf_prediction})\n",
     "print(results.head(4))"
    ]
   },
