--- a/index.ipynb
+++ b/index.ipynb
@@ -1441,9 +1441,9 @@
     }
    ],
    "source": [
-    "# Importance des features\n",
+    "# Features Importance\n",
     "feature_importance = pd.DataFrame({'feature': X.columns, 'importance': rf_model.feature_importances_})\n",
-    "print(\"\\nImportance des features:\")\n",
+    "print(\"\\nFeatures Importance:\")\n",
     "print(feature_importance.sort_values('importance', ascending=False))"
    ]
   },
